# mazerunner

./: CLAUDE.md  maze.json  pyproject.toml  save.json
mazes/: simple-1.json
src/mazerunner/: __init__.py  config_dialog.py  game.py  hamburger_menu.py  maze_editor.py  maze_load_dialog.py  settings.py
